k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres15
  namespace: airbnb-stack
spec:
  serviceName: "postgres15"
  replicas: 1
  selector:
    matchLabels:
      app: postgres15
  template:
    metadata:
      labels:
        app: postgres15
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["/bin/sh","-c","pg_isready -U \"$POSTGRES_USER\" -d airbnb -h 127.0.0.1"]
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["/bin/sh","-c","pg_isready -U \"$POSTGRES_USER\" -d airbnb -h 127.0.0.1"]
            initialDelaySeconds: 30
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres15
  namespace: airbnb-stack
spec:
  selector:
    app: postgres15
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
